--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,15 @@ android {
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.greet"
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    viewBinding {
+        enabled=true
     }
 
     buildTypes {
@@ -31,4 +35,5 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.2.1'
 }
